--- a/app1/app1.json
+++ b/app1/app1.json
@@ -1,7 +1,7 @@
 [
     {
         "ParameterKey": "InstanceType",
-        "ParameterValue":"t2.nano",
+        "ParameterValue":"t2.micro",
         "UsePreviousValue":false
     },
     {
