--- a/app1/app1.yaml
+++ b/app1/app1.yaml
@@ -18,7 +18,7 @@ Resources:
   secGroupName:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Ref AWS::StackName
+      GroupName: !Sub ${AWS::StackName}-${SGGroupName}
       GroupDescription: !Ref SGGroupName
       SecurityGroupIngress:
         - IpProtocol: -1
